@@ -12,5 +12,6 @@ export const serviceSettings = ( methodId, instanceId = 0 ) => `connect/services
 export const shippingCarrier = () => 'connect/shipping/carrier';
 export const shippingCarriers = () => 'connect/shipping/carriers';
 export const subscriptions = () => 'connect/subscriptions';
+export const subscriptionActivate = ( subscriptionKey ) => `connect/subscription/${ subscriptionKey }/activate`;
 export const shippingCarrierDelete = ( carrier ) => `connect/shipping/carrier/${ carrier }`;
 export const shippingCarrierTypes = () => 'connect/shipping/carrier-types';
